# fdb

./: Cargo.toml  deny.toml  flake.nix  infer.fql  syntax.fql
.cargo/: config.toml
.github/workflows/: ci.yml
fdb/: Cargo.toml  main.rs
fql/: Cargo.toml  ast.rs  ctx.rs  desugar.rs  error.rs  lexer.rs  lib.rs  parser.rs  parsers.rs  semantic.rs
fql/ctx/: mod.rs  registry.rs
fql/parser/: mod.rs  parsers.rs
fql/type_checker/: hm_type.rs  mod.rs  substitution.rs  type_env.rs  typed.rs
src/: main.rs
