[workspace]
members = ["fdb", "fql"]
resolver = "3"

[workspace.package]
name = "fracturedb"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["isoflux"]
publish = false
repository = ""

[workspace.dependencies]
nom = "8"
nom-language = "0.1"

[workspace.metadata.crane]
name = "fracturedb"
