[workspace]
members = ["fdb", "fql"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["isoflux"]
publish = false
repository = ""

[workspace.dependencies]
num = "0.4.3"
chumsky = { version = "0.10.1", features = ["pratt"] }
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0"

[workspace.metadata.crane]
name = "fracturedb"
