[package]
name = "fql"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
chumsky.workspace = true
lasso.workspace = true
miette.workspace = true
num.workspace = true
thiserror.workspace = true
